result/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  labels:
    app: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
      
  template:
    metadata:
      labels:
        app: result
    spec:
      serviceAccountName: result
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: result
        image: nahlathabet/result:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 4000
        
        volumeMounts:
        - name: result-storage
          mountPath: /tmp
      volumes:
      - name: result-storage
        persistentVolumeClaim:
          claimName: result-pvc
