result/k8s/base/test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-client-test
  labels:
    app: postgres-client-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-client-test
      
  template:
    metadata:
      labels:
        app: postgres-client-test
    spec:
      containers:
      - name: postgres-client
        image: postgres:15-alpine
        command: ['sh', '-c', 'sleep 3600']
