result/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
spec:
  ports:
  - port: 8081
    targetPort: 4000
  selector:
    app: result
